--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,23 @@
 body {
-    background: red;
+    width: auto;
+    margin: 1em;
+}
+
+main a {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center; /* NEW */
+
+    color: black;
+    text-decoration: none;
+}
+
+main img {
+    margin-right: 1em;
+}
+
+main h1 {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    margin-top: 0;
+    margin-bottom: 0;
 }
